# studio-prep

./: .gitignore  README.md  config.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: copy-tauri-exe.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  repository.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: AppShell.tsx  ImageThumbnail.tsx  LoadingScreen.tsx  ProjectCard.tsx  ProjectEditorPanel.tsx  ProjectListItem.tsx  ProjectManagerSheet.tsx  WorkspaceHeader.tsx  ui.tsx
src/data/: mockStudioData.json  mockStudioData.ts
src/lib/: clone.ts  labels.ts  runtime.ts  tauriBridge.ts
src/repositories/: browserStudioPrepRepository.ts  studioPrepRepository.ts  tauriStudioPrepRepository.ts
src/screens/: DashboardScreen.tsx  ProjectDetailScreen.tsx  ReviewExportScreen.tsx  SmartStorePlaceholderScreen.tsx  TextStudioScreen.tsx  WorkspaceScreen.tsx
src/services/: projectFactory.ts  studioPrepEditor.ts
src/state/: useStudioPrepState.ts
src/types/: domain.ts
